Home page added
Home page added and minor css edits for mario

--- a/t-rex-mario/styles/styles.css
+++ b/t-rex-mario/styles/styles.css
@@ -60,5 +60,9 @@ a:link    {color:#ffffff; background-color:transparent; text-decoration:none}
 }
 #original {
   color: white;
+  opacity: 0.75;
+}
+#chrome {
+  color: white;
   opacity: 0.5;
 }
