--- a/md-master/style.css
+++ b/md-master/style.css
@@ -1,311 +1,418 @@
-.form-container{
-	font-family: Calibri, sans-serif;
+.form-container {
+    font-family: Calibri, sans-serif;
 
 }
-td{
-	font-family: Calibri, sans-serif;
-	padding: 1px;
-	word-wrap:break-word;
-	vertical-align:top;
-	white-space: normal;
+
+td {
+    font-family: Calibri, sans-serif;
+    padding: 1px;
+    word-wrap: break-word;
+    vertical-align: top;
+    white-space: normal;
 }
+
 img {
-	vertical-align: sub;
+    vertical-align: sub;
 }
-td:nth-child(1) {
+
+.form-container td:nth-child(1){
+	width: 60%;
+}
+.main td:nth-child(1) {
     width: 95pt;
 }
-td:nth-child(2) {
+
+.main td:nth-child(2) {
     width: 29pt;
 }
-td:nth-child(3) {
+
+.main td:nth-child(3) {
     width: 23pt;
 }
-td:nth-child(4) {
+
+.main td:nth-child(4) {
     width: 203pt;
 }
-td:nth-child(5) {
+
+.main td:nth-child(5) {
     width: 20pt;
 }
-td:nth-child(6) {
+
+.main td:nth-child(6) {
     width: 29pt;
 }
-td:nth-child(7) {
+
+.main td:nth-child(7) {
     width: 95pt;
 }
 
 
-.dispDtYd1{
-	background-color: #F2F2F2;
-	font-weight: bold;
+.dispDtYd1 {
+    background-color: #F2F2F2;
+    font-weight: bold;
 }
-.dispDtMd1{
-	background-color: #D9E1F2;
-	font-weight: bold;
+
+.dispDtMd1 {
+    background-color: #D9E1F2;
+    font-weight: bold;
 }
-.tmyd1{
-	background-color: #F2F2F2;
+
+.tmyd1 {
+    background-color: #F2F2F2;
 }
-.tmmd1{
-	background-color: #D9E1F2;
+
+.tmmd1 {
+    background-color: #D9E1F2;
 }
-.yd1{
-	background-color: #F2F2F2;
+
+.yd1 {
+    background-color: #F2F2F2;
 }
-.md1{
-	background-color: #D9E1F2;
+
+.md1 {
+    background-color: #D9E1F2;
 }
-.msgyd1{
-	background-color: #F2F2F2;
-	text-align: right;
+
+.msgyd1 {
+    background-color: #F2F2F2;
+    text-align: right;
 }
-.msgmd1{
-	background-color: #D9E1F2;
+
+.msgmd1 {
+    background-color: #D9E1F2;
 }
 
 
-.dispDtYd2{
-	background-color: #FFF2CC;
-	font-weight: bold;
+.dispDtYd2 {
+    background-color: #FFF2CC;
+    font-weight: bold;
 }
-.dispDtMd2{
-	background-color: #A9D08E;
-	font-weight: bold;
+
+.dispDtMd2 {
+    background-color: #A9D08E;
+    font-weight: bold;
 }
-.tmyd2{
-	background-color: #FFF2CC;
+
+.tmyd2 {
+    background-color: #FFF2CC;
 }
-.tmmd2{
-	background-color: #A9D08E;
+
+.tmmd2 {
+    background-color: #A9D08E;
 }
-.yd2{
-	background-color: #FFF2CC;
+
+.yd2 {
+    background-color: #FFF2CC;
 }
-.md2{
-	background-color: #A9D08E;
+
+.md2 {
+    background-color: #A9D08E;
 }
-.msgyd2{
-	background-color: #FFF2CC;
-	text-align: right;
+
+.msgyd2 {
+    background-color: #FFF2CC;
+    text-align: right;
 }
-.msgmd2{
-	background-color: #A9D08E;
+
+.msgmd2 {
+    background-color: #A9D08E;
 }
 
 
-.dispDtYd3{
-	background-color: #BF8F00;
-	font-weight: bold;
+.dispDtYd3 {
+    background-color: #BF8F00;
+    font-weight: bold;
 }
-.dispDtMd3{
-	background-color: #FFC000;
-	font-weight: bold;
+
+.dispDtMd3 {
+    background-color: #FFC000;
+    font-weight: bold;
 }
-.tmyd3{
-	background-color: #BF8F00;
+
+.tmyd3 {
+    background-color: #BF8F00;
 }
-.tmmd3{
-	background-color: #FFC000;
+
+.tmmd3 {
+    background-color: #FFC000;
 }
-.yd3{
-	background-color: #BF8F00;
+
+.yd3 {
+    background-color: #BF8F00;
 }
-.md3{
-	background-color: #FFC000;
+
+.md3 {
+    background-color: #FFC000;
 }
-.msgyd3{
-	background-color: #BF8F00;
-	text-align: right;
+
+.msgyd3 {
+    background-color: #BF8F00;
+    text-align: right;
 }
-.msgmd3{
-	background-color: #FFC000;
+
+.msgmd3 {
+    background-color: #FFC000;
 }
 
 
-.dispDtYd4{
-	background-color: #7B7B7B;
-	font-weight: bold;
+.dispDtYd4 {
+    background-color: #7B7B7B;
+    font-weight: bold;
 }
-.dispDtMd4{
-	background-color: #BFBFBF;
-	font-weight: bold;
+
+.dispDtMd4 {
+    background-color: #BFBFBF;
+    font-weight: bold;
 }
-.tmyd4{
-	background-color: #7B7B7B;
+
+.tmyd4 {
+    background-color: #7B7B7B;
 }
-.tmmd4{
-	background-color: #BFBFBF;
+
+.tmmd4 {
+    background-color: #BFBFBF;
 }
-.yd4{
-	background-color: #7B7B7B;
+
+.yd4 {
+    background-color: #7B7B7B;
 }
-.md4{
-	background-color: #BFBFBF;
+
+.md4 {
+    background-color: #BFBFBF;
 }
-.msgyd4{
-	background-color: #7B7B7B;
-	text-align: right;
+
+.msgyd4 {
+    background-color: #7B7B7B;
+    text-align: right;
 }
-.msgmd4{
-	background-color: #BFBFBF;
+
+.msgmd4 {
+    background-color: #BFBFBF;
 }
 
 
-.dispDtYd5{
-	background-color: #FFFFFF;
-	font-weight: bold;
+.dispDtYd5 {
+    background-color: #FFFFFF;
+    font-weight: bold;
 }
-.dispDtMd5{
-	background-color: #E5FCE4;
-	font-weight: bold;
+
+.dispDtMd5 {
+    background-color: #E5FCE4;
+    font-weight: bold;
 }
-.tmyd5{
-	background-color: #FFFFFF;
+
+.tmyd5 {
+    background-color: #FFFFFF;
 }
-.tmmd5{
-	background-color: #E5FCE4;
+
+.tmmd5 {
+    background-color: #E5FCE4;
 }
-.yd5{
-	background-color: #FFFFFF;
+
+.yd5 {
+    background-color: #FFFFFF;
 }
-.md5{
-	background-color: #E5FCE4;
+
+.md5 {
+    background-color: #E5FCE4;
 }
-.msgyd5{
-	background-color: #FFFFFF;
-	text-align: right;
+
+.msgyd5 {
+    background-color: #FFFFFF;
+    text-align: right;
 }
-.msgmd5{
-	background-color: #E5FCE4;
+
+.msgmd5 {
+    background-color: #E5FCE4;
 }
 
 
-.dispDtYd6{
-	background-color: #CDE4BE;
-	font-weight: bold;
+.dispDtYd6 {
+    background-color: #CDE4BE;
+    font-weight: bold;
 }
-.dispDtMd6{
-	background-color: #EDEDED;
-	font-weight: bold;
+
+.dispDtMd6 {
+    background-color: #EDEDED;
+    font-weight: bold;
 }
-.tmyd6{
-	background-color: #CDE4BE;
+
+.tmyd6 {
+    background-color: #CDE4BE;
 }
-.tmmd6{
-	background-color: #EDEDED;
+
+.tmmd6 {
+    background-color: #EDEDED;
 }
-.yd6{
-	background-color: #CDE4BE;
+
+.yd6 {
+    background-color: #CDE4BE;
 }
-.md6{
-	background-color: #EDEDED;
+
+.md6 {
+    background-color: #EDEDED;
 }
-.msgyd6{
-	background-color: #CDE4BE;
-	text-align: right;
+
+.msgyd6 {
+    background-color: #CDE4BE;
+    text-align: right;
 }
-.msgmd6{
-	background-color: #EDEDED;
+
+.msgmd6 {
+    background-color: #EDEDED;
 }
 
 
-{box-sizing: border-box;}
+    {
+    box-sizing: border-box;
+}
 
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
-  background-color: #555;
+    background-color: #555;
     color: white;
     padding: 5px 5px;
     border: none;
     cursor: pointer;
     opacity: 0.8;
     position: fixed;
-    bottom: 23px;
-    right: 28px;
+    bottom: 15px;
+    right: 15px;
+    width: 35px;
+}
+
+.cancel {
+    background-color: red;
+    color: white;
+    padding: 5px 5px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    /*bottom: 23px;*/
+    right: 15px;
+    width: 35px;
+}
+
+.search-popup .cancel {
+    top: 15px;
+}
+
+.search-popup button[type=submit] {
+    padding: 10px 10px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    /* position: fixed; */
+    /* right: 67px; */
+    width: 35px;
+}
+
+.prevSearch,
+.nextSearch {
+    width: 20% !important; 
+    background: aliceblue;
+    cursor: pointer;
+    text-align: center;
+}
+
+.currentSearch {
+    width: 60%;
+    text-align: center;
+}
+
+.open-search {
+    background-color: #555;
+    color: white;
+    padding: 5px 5px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    top: 15px;
+    right: 15px;
     width: 35px;
 }
 
 /* The popup form - hidden by default */
 .form-popup {
-  display: none;
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+}
+
+.search-popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
 }
 
 /* Add styles to the form container */
 .form-container {
-  max-width: 300px;
-  padding: 10px;
-  background-color: white;
+    max-width: 300px;
+    padding: 10px;
+    background-color: white;
 }
 
 /* Full-width input fields */
-.form-container input[type=text], .form-container input[type=password] {
-  padding: 15px;
-  margin: 5px 0 5px 0;
-  border: none;
-  background: #f1f1f1;
+.form-container input[type=text] {
+    padding: 11px;
+    margin: 2px 13px 5px 0;
+    border: none;
+    background: #f1f1f1;
 }
-/*.form-container input[type=file] {
+
+.form-container input[type=file] {
   padding: 10px;
-}*/
+}
 
 /* When the inputs get focus, do something */
-.form-container input[type=text]:focus, .form-container input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
+.form-container input[type=text]:focus,
+.form-container input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
 }
 
 /* Set a style for the submit/login button */
 .form-container .btn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
-}
-
-/* Add a red background color to the cancel button */
-.form-container .cancel {
-  background-color: red;
-  color: white;
-  padding: 5px 5px;
-  border: none;
-  cursor: pointer;
-  float: right;
-  opacity: 0.8;
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom: 10px;
+    opacity: 0.8;
 }
 
 /* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
-  opacity: 1;
+.form-container .btn:hover,
+.open-button:hover {
+    opacity: 1;
 }
 
 
 .modal {
-    display:    none;
-    position:   fixed;
-    z-index:    1000;
-    top:        0;
-    left:       0;
-    height:     100%;
-    width:      100%;
-    background: rgba( 255, 255, 255, .8 ) 
-                url('http://i.stack.imgur.com/FhHRx.gif') 
-                50% 50% 
-                no-repeat;
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(255, 255, 255, .8) url('http://i.stack.imgur.com/FhHRx.gif') 50% 50% no-repeat;
 }
 
 /* When the body has the loading class, we turn
    the scrollbar off with overflow:hidden */
 body.loading .modal {
-    overflow: hidden;   
+    overflow: hidden;
 }
 
 /* Anytime the body has the loading class, our
