split films into movies, games, docus and tv

--- a/media-consumption/styles/styles.css
+++ b/media-consumption/styles/styles.css
@@ -152,7 +152,7 @@
 /*style items (options):*/
 .select-items {
   position: absolute;
-  background-color: DodgerBlue;
+  background-color: #dc143c;
   top: 100%;
   left: 0;
   right: 0;
